--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons-vue": "^0.5.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.12"
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0-rc.7",
+    "jquery": "^3.6.0",
+    "vue": "^2.6.12",
+    "vue-axios": "^3.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
